@@ -38,6 +38,12 @@ KEdit will exit.</P>
 <H3>Print</H3>
 
 <P>Open the print dialog and lets the user print the whole document or the current selection.</P>
+
+<H3>Mail </H3>
+
+<P>Brings up a mail dialog. Make sure you have checked and if necessary modified the
+mail command on the 'Misc Options' dialog on the 'Options' menu.</P>
+
 <H3>New Window</H3>
 
 
@@ -90,9 +96,10 @@ fonts within a document. </P>
 <H3>Colors</H3>
 
 <P>Allows the user to select fore and background color of KEdit's text display area.</P>
-<H3>Fill Column</H3>
+<H3>Misc Options</H3>
 
-<P>Allows the user to set a fill column as well as to enable word wrap.</P>
+<P>Allows the user to set a fill column as well as to enable word wrap and set the mail
+command suitable for his system.</P>
 <H3>Auto Indent</H3>
 
 <P>Allows the user to switch to auto indent mode and back. In auto indent mode the 
