@@ -1,0 +1,31 @@
+/* XPM */
+static char * sendmail_xpm[] = {
+"22 22 6 1",
+" 	s None	c None",
+".	c black",
+"X	c grey70",
+"o	c white",
+"O	c #79E77DF779E7",
+"+	c #DF7DDF7DDF7D",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+".X.X.X............... ",
+"      .ooooooooooooo.O",
+"X.X.X..+oooooooooX..O ",
+"     .o.ooooooooO.o.O ",
+".X.X.oo.oooooo+.oo.O  ",
+"    .oo.+ooooO.+oo.O  ",
+"X.X.oo.o.ooo.o.oo.O   ",
+"   .o.ooo...ooo.o.O   ",
+".X..ooooooooooo..O    ",
+"  ...............O    ",
+"   OOOOOOOOOOOOOOO    ",
+"                      ",
+"                      ",
+"                      ",
+"                      ",
+"                      "};
