@@ -1,1 +1,1 @@
-#define KEDITVERSION "0.5.2"
+#define KEDITVERSION "0.5.3"
